modifed according to the roppers assingment

--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nipun lakmal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>This is my frist webpage.</p>
+    <!-- navbar -->
+    <header>
+      <!-- logo -->
+      <div class="logo">
+        <h1>Nipun</h1>
+      </div>
+      <!-- toggle btn -->
+      <div class="icon" onclick="toggleNavbar()">
+        &#9776;
+      </div>
+      <nav class="navbar" id="navbar">
+        <a href="index.html" class="active">Home</a>
+        <a href="#about">About</a>
+        
+      </nav>
+   </header>
+    <!-- navbar ends here -->
+
+    <main>
+         <div class="main-image">
+          <img src="./images/sky-cloud-icon-nature-png-5691835.svg" alt="cloud image" class="cloud-image">
+         </div>
+
+         <!-- about -->
+         <div id="about">
+              <h1>Hello Im Nipun</h1>
+              <p></p>
+         </div>
+    </main>
+    
+
+
+    <!-- footer  -->
+    <footer>
+      <p> © 2023 Nipun</p>
+    </footer>
+    <!-- footer ends here -->
+
+    <script src="script.js"></script>
 </body>
 </html>
